test/fail/import03_.c
int c_add(void* p, int x, int y) {
  return x + y;
}
